[workspace]
members = ["node", "cli", "database"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
hex = "0.4.3"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }